# uWebSockets

./: .gitattributes  .gitignore  .gitmodules  .npmignore  .travis.yml  15.pro  Autobahn.json  BUILD  Broadcast  BroadcastingEchoServer  CMakeLists.txt  CODE_OF_CONDUCT.md  Crc32  DETAILS.md  EchoBody  EchoServer  GNUmakefile  HelloWorld  Http.cpp  Http.h  Http3Server  Hub.cpp  Hub.h  ISSUE_TEMPLATE.md  LICENSE  MANIFEST  MODULE.bazel  Makefile  NOTICE  NuGet.Config  ParameterRoutes  Precompress  README-centos7.md  README.md  README_ZH.md  READMORE.md  SecureGzipFileServer  Server.cpp  Server.h  ServerName  (+25 more)
.github/: FUNDING.yml
.github/workflows/: cifuzz.yml  codeql.yml  cpp.yml
Autobahn/: index.html
autobahn/: fuzzingclient.json  index.html  server-test.js
benchmarks/: CMakeLists.txt  Makefile  README.md  beast.cpp  bench1.cpp  bench2.cpp  bench2_optimized.cpp  bench3.cpp  benchmark_results_scalability  broadcast_test.c  crow.cpp  gorilla.go  load_test.c  lws.cpp  parser.cpp  runGorilla.sh  scalability.cpp  scalability_socketio.cpp  scale_test.c  socketio.js  throughput.cpp  throughput_socketio.cpp  uWS.cpp  ws.js
capi/: App.cpp  CAPIApp.cpp  CAPIApp.h  CAPIAppSSL.cpp  CAPIAppSSL.h  Makefile  example.c  example.rs  libuwebsockets.cpp  libuwebsockets.h
capi/examples/: Broadcast.c  BroadcastEchoServer.c  CAPIBroadcast.c  CAPIBroadcastEchoServer.c  CAPIBroadcastEchoServerSSL.c  CAPIBroadcastSSL.c  CAPIEchoServer.c  CAPIEchoServerSSL.c  CAPIHelloWorld.c  CAPIHelloWorldAsync.c  CAPIHelloWorldSSL.c  CAPIServerName.c  CAPIServerNameSSL.c  CAPIUpgradeAsync.c  CAPIUpgradeAsyncSSL.c  CAPIUpgradeSync.c  CAPIUpgradeSyncSSL.c  EchoServer.c  HelloWorld.c  HelloWorldAsync.c  RustHelloWorld.rs  ServerName.c  UpgradeAsync.c  UpgradeSync.c
cmake/: FindLibUV.cmake  cmake_uninstall.cmake.in  defaultbuild.cmake.inc  linux-test-build-configs.sh
cmake/Modules/: FindUUID.cmake  RegexUtils.cmake  UHDComponent.cmake
cmake/modules/: FindLibuv.cmake  FindZ.cmake
examples/: BUILD  BatchProcessingExample.cpp  Broadcast.cpp  BroadcastingEchoServer.cpp  CMakeLists.txt  CachingApp.cpp  ChunkedResponse.cpp  Client.cpp  CompressionIOS15.cpp  Crc32.cpp  EchoBody.cpp  EchoServer.cpp  EchoServerThreaded.cpp  HelloHttpServer.cpp  HelloWorld.cpp  HelloWorldSSL.cpp  HelloWorldThreaded.cpp  Http3Server.cpp  HttpServer.cpp  LoadBalancer.cpp  Makefile  ParameterRoutes.cpp  Precompress.cpp  README.md  SecureGzipFileServer.cpp  ServerName.cpp  SmokeTest.cpp  UpgradeAsync.cpp  UpgradeSync.cpp  client_echo.cpp  echo.cpp  echo_client.cpp  echo_unix.cpp  http_client_srvr.cpp  main.cpp  meson.build  multithreaded_echo.cpp  static_http_server.cpp
examples/helpers/: AsyncFileReader.h  AsyncFileStreamer.h  FileCache.h
examples/web/: index.html
fuzzing/: AsyncEpollHelloWorld.cpp  EpollEchoServer.cpp  EpollEchoServerPubSub.cpp  EpollHelloWorld.cpp  Extensions.cpp  Handshake.cpp  Http.cpp  Makefile  MockedBroadcastingEchoServer.cpp  MockedEchoServer.cpp  MockedEmptyHandlersServer.cpp  MockedHelloWorld.cpp  PerMessageDeflate.cpp  README.md  TopicTree.cpp  WebSocket.cpp  helpers.h  uSocketsMock.c
libEpollBenchmarker/: CMakeLists.txt  Makefile  epoll_benchmarker.cpp
misc/: 15.pro  Autobahn.json  FAQ.md  READMORE.md  cert.pem  design.dia  key.pem  main.cpp
misc/cmake/Modules/: FindLibUV.cmake
misc/ssl/: cert.pem  dh_param_2048.pem  key.pem
nodejs/: Makefile  README.md  addon.cpp  addon.h  binding.gyp  client.js  echo.js  eventsource.js  extension.cpp  http.h  http.js  http_demo.js  http_sillybenchmark.js  koa.js  make.bat  paths.js  ssl.js  test.js
nodejs/examples/: client.js  http.js
nodejs/lib/: native.js  uws.js
nodejs/misc/: echo.js
nodejs/scripts/: _minico.js  build.js  install.js  postbuild.js
nodejs/src/: addon.cpp  addon.h  extension.cpp  uws.js
nodejs/targets/: README.md
nodejs/tests/: autobahn.js
src/: Agent.cpp  Agent.h  App.h  Asio.h  AsyncSocket.h  AsyncSocketData.h  Backend.h  BloomFilter.h  CMakeLists.txt  CachingApp.h  ChunkedEncoding.h  Client.h  ClientApp.h  Context.h  Epoll.cpp  Epoll.h  EventSystem.cpp  EventSystem.h  Extensions.cpp  Extensions.h  Group.cpp  Group.h  Group.inl  HTTPResponse.cpp  HTTPSocket.cpp  HTTPSocket.h  Http.cpp  Http.h  Http3App.h  Http3Context.h  Http3ContextData.h  Http3Request.h  Http3Response.h  Http3ResponseData.h  HttpContext.h  HttpContextData.h  HttpErrors.h  HttpParser.h  HttpRequest.h  HttpResponse.h  (+61 more)
src/f2/: function2.hpp
src/http/: HttpApp.h  HttpParser.h  HttpRouter.h  HttpSocket.h
src/new_design/: AsyncSocket.h  HttpContext.h  HttpContextData.h  HttpResponse.h  HttpResponseData.h  HttpRouter.h  Loop.h  LoopData.h  StaticDispatch.h
src/websocket/: WebSocket.h  WebSocketApp.h  WebSocketProtocol.h
tests/: .gitignore  BloomFilter  BloomFilter.cpp  CMakeLists.txt  ChunkedEncoding  ChunkedEncoding.cpp  ExtensionsNegotiator  ExtensionsNegotiator.cpp  HttpParser  HttpParser.cpp  HttpResponse.cpp  HttpRouter  HttpRouter.cpp  Makefile  Query  Query.cpp  README.md  TopicTree  TopicTree.cpp  http_test.ts  main.cpp  meson.build  smoke.mjs  uWebSockets.pro
uWebSockets/: CMakeLists.txt
uWebSockets/benchmarks/: README.md  gateway-config-minimal.xml  lws.cpp  throughput.cpp  ws.js  wsPP.cpp
uWebSockets/examples/: CMakeLists.txt  echo.cpp
uWebSockets/nodejs/: addon.cpp  echo.js  make.bat
uWebSockets/src/: EventSystem.cpp  EventSystem.h  Extensions.h  HTTPSocket.cpp  Network.cpp  Network.h  SocketData.h  UTF8.cpp  UTF8.h  WebSocket.h  meson.build
